# self-driving-vehicles-in-a-data-driven-way

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  code-of-conduct.md
src/: main.cpp
test/: TestPrimeChecker.cpp
